created folder page layout without sub-nav menu

--- a/site/collections/folders.conf
+++ b/site/collections/folders.conf
@@ -4,3 +4,10 @@
   "addText": "Add Page",
   "icon" : "folder"
 }
+
+{
+  "title" : "Folder_no_menu",
+  "folder": true,
+  "addText": "Add Page",
+  "icon" : "folder"
+}
