--- a/site/template.conf
+++ b/site/template.conf
@@ -1,12 +1,16 @@
 {
 
-  "name" : "Bedford",
-  "author" : "Squarespace",
+  "name" : "Bedford > Hayden > LEVL3design",
+  "author" : "Squarespace > LEVL3design",
 
   "layouts" : {
     "default" : {
       "name" : "Default",
-      "regions" : [ "site" ]
+      "regions" : [ "site"]
+    },
+    "pageWithMenu" : {
+      "name" : "Page in Folder With Menu",
+      "regions" : [ "pageWithMenu"]
     }
   },
 
