fixed nav bottom border issue

--- a/site/template.conf
+++ b/site/template.conf
@@ -9,7 +9,7 @@
       "regions" : [ "site"]
     },
     "pageWithMenu" : {
-      "name" : "Page in Folder With Menu",
+      "name" : "Page With Menu (if in folder)",
       "regions" : [ "pageWithMenu"]
     }
   },
