fixed search bar issue

--- a/site/template.conf
+++ b/site/template.conf
@@ -9,8 +9,8 @@
       "regions" : [ "site"]
     },
     "pageWithMenu" : {
-      "name" : "Page With Menu (if in folder)",
-      "regions" : [ "pageWithMenu"]
+      "name" : "Page Without Menu (use for pages in folder)",
+      "regions" : [ "pageWithoutMenu"]
     }
   },
 
